--- a/src/main/resources/static/styles/cssandjs/main.css
+++ b/src/main/resources/static/styles/cssandjs/main.css
@@ -11,7 +11,7 @@ ul{
     list-style: none;
 }
 body{
-    background-image: url("../img/just-waves.png");
+    background-image: url("../../img/just-waves.png");
     background-repeat: repeat;
 }
 .container{
