--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
     <title>register</title>
     <style>
         body{
-            background-image: url([[@{../static/img/ripples.png}]]);
+            background-image: url([[@{/img/ripples.png}]]);
             background-repeat: repeat;
             font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
         }
