--- a/src/main/resources/static/styles/cssandjs/main.css
+++ b/src/main/resources/static/styles/cssandjs/main.css
@@ -44,6 +44,12 @@ header a{
     margin-top:8px;
     margin-right:20px;
 }
+header a.profile-mini{
+    padding: 0;
+    top:-20px;
+    right: -10px;
+    position: relative;
+}
 .searchbar{
     width: auto;
     height: 40px;
@@ -127,4 +133,10 @@ header a{
 }
 .track .buttons button:nth-of-type(1){
     margin-right: 37px;
+}
+img.profile-mini{
+    margin: 0;
+    height: 60px;
+    width: 60px;
+    border-radius: 30px ;
 }
