--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>main</title>
-    <link rel="stylesheet" th:href="@{../static/styles/cssandjs/main.css}" href="../static/styles/cssandjs/main.css">
+    <link rel="stylesheet" th:href="@{/styles/cssandjs/main.css}">
 
 </head>
 <body>
