--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <style th:inline="text">
         body{
             font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
-            background-image: url([[@{../static/img/leaves.png}]]);
+            background-image: url([[@{/img/leaves.png}]]);
             background-repeat: repeat;
         }
         *,
