--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,11 +1,13 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      lang="java">
 <head>
     <title>register</title>
     <style>
         body{
+            font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
             background-image: url([[@{/img/ripples.png}]]);
             background-repeat: repeat;
-            font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
         }
         *,
         *:before,
@@ -87,8 +89,8 @@
 <form th:action="@{/register}" id="register-form" name="register-form" method="post">
     <a th:href="@{/}"><h3>WYM</h3></a>
     <p th:if="${message!=null}" class="error" th:text="${message}">aghh...</p>
-    <label for="username">логин:</label>
-    <input type="text" placeholder="abobus" name="username" id="username">
+    <label for="login">логин:</label>
+    <input type="text" placeholder="abobus" name="login" id="login">
     <label for="password">пароль:</label>
     <input type="password" placeholder="*****" name="password" id="password">
 	<label for="repeat">пароль:</label>
