Updating application terminology: login -> username

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -89,8 +89,8 @@
 <form th:action="@{/register}" id="register-form" name="register-form" method="post">
     <a th:href="@{/}"><h3>WYM</h3></a>
     <p th:if="${message!=null}" class="error" th:text="${message}">aghh...</p>
-    <label for="login">логин:</label>
-    <input type="text" placeholder="abobus" name="login" id="login">
+    <label for="username">логин:</label>
+    <input type="text" placeholder="abobus" name="username" id="username">
     <label for="password">пароль:</label>
     <input type="password" placeholder="*****" name="password" id="password">
 	<label for="repeat">пароль:</label>
