--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,6 +16,9 @@
             margin: 0;
             box-sizing: border-box;
         }
+		.error{
+			color: red;
+		}
         body{
             background-color: #FFF;
             color:#000000
