--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,14 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
+    <title>cart</title>
     <link rel="stylesheet" th:href="@{/styles/cssandjs/main.css}" href="../static/styles/cssandjs/main.css">
 
 </head>
 <body>
 <div class="container">
-    <div th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></div>
-    <div th:replace="fragments/searchbar :: searchbar"></div>
+    <div th:replace="fragments/header :: user-header"></div>
     <section class="catalogue">
         <ul>
             <li>
@@ -29,10 +28,18 @@
                     </div>
                     <div class = "buttons">
                         <button>star</button>
-                        <button>cart</button>
+						<button class="cost">-1$</button>
                     </div>
                 </div>
             </li>
+			<li class="checkout">
+				<div>
+                	<p class="total">Всего 10р (1 трек)</p>
+				</div>
+				<div>
+                	<button class="pay">Оплатить</button>
+				</div>
+			</li>
         </ul>
     </section>
 </div>
