ya nenavizhu frontend

--- a/src/main/resources/templates/favorite.html
+++ b/src/main/resources/templates/favorite.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div class="container">
-    <div th:replace="fragments/header :: user-header"></div>
+    <header th:replace="fragments/header :: user-header"></header>
     <section class="catalogue">
         <ul>
-             <li>
+            <li>
                 <div class="track">
                     <div>
                         <a>
