--- a/src/main/resources/static/styles/cssandjs/main.css
+++ b/src/main/resources/static/styles/cssandjs/main.css
@@ -1,188 +1,231 @@
 *,
 *:before,
-*:after{
+*:after {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     letter-spacing: 0.5px;
+    border-collapse: collapse;
 }
 ul{
     list-style: none;
 }
-body{
-    background-image: url("../../img/just-waves.png");
+body {
+    background-image: url("../static/img/just-waves.png");
     background-repeat: repeat;
+    padding-top:10px;
 }
 .container{
     background: #FFFFFF;
     border-radius: 4px;
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
     margin: auto;
-    width:800px;
+    width: 800px;
 }
 header{
-    overflow: auto;
-    height: 70px;
-    border:2px solid #A3A3A3;
-    border-radius: 4px;
-    padding: 14px 10px;
-    background-color: #E8E8E8;
+    height: 60px;
+    border: 2px solid #AAA;
+    background-color:#EEE;
+}
+header a.logo{
+    margin-top: 12px;
+    margin-left: 15px;
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+}
+header .nav{
+    float:right;
     position: relative;
+    vertical-align: middle;
+    height: 60px;
+}
+header .nav>div{
+    margin-left:15px;
+    position: relative;
+    top:20px;
+    display: inline-block;
+}
+header .nav>div:last-of-type{
+	margin-right: 80px;
+}
+header .nav>div.profile-mini{
+	position: absolute;
+    top:0;
+	right: 0px;
+}
+header nav .dropdown{
+    display: inline-block;
+    position: relative;
+}
+.nav a{
+    text-decoration: none;
+    color:#555;
+}
+.nav a:visited{
+    color:#555;
+}
+header .nav .profile-mini img{
+    width:60px;
+    height:60px;
+    border-radius: 30px;
+    overflow: hidden;
+}
+header .nav div.dropdown-content{
+    display: none;
+    position: absolute;
+    min-width: 200px;
+    overflow: hidden;
+    border-radius: 13px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    padding: 12px 16px;
+    background-color: #EEE;
+    text-decoration: none;
+    border-bottom:1px dashed #AAA;
     display: block;
-    vertical-align: middle;
 }
-header h1{
-    display:inline-block;
+.dropdown-content a:hover {
+    background-color: white;
 }
-header a.nav{
-    color:#969696;
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    float:right;
-    margin-top:8px;
-    margin-right:20px;
+.dropdown:hover .dropdown-content {
+    display: block;
 }
-header a.profile-mini{
-    padding: 0;
-    top:-20px;
-    right: -10px;
-    position: relative;
-    color:#969696;
-    display: inline-block;
-    vertical-align: middle;
-    float:right;
-    margin-top:8px;
-    margin-right:20px;
+.dropdown:hover .dropbtn {
+    background-color: grey;
+}
+.nav a.logout{
+    color:#A00;
 }
 .searchbar{
-    width: auto;
     height: 40px;
-    border: 2px solid #A2A2A2;
-    border-radius:4px;
+    border: 1px solid #AAA;
+    position: relative;
 }
 .searchbar div{
-    margin:3px;
+    margin-top: 6px;
+    display: inline-block;
+}
+.searchbar div:nth-of-type(2){
+    margin-right:16px;
+}
+.searchbar div:first-of-type{
+    margin-right: 70px;
+    margin-left: 40px;
 }
 .searchbar input{
-    font-size:16px;
-    padding:8px;
-    height: 30px;
-}
-.searchbar .bar{
-    float: left;
-}
-.searchbar .mood{
-    float: right;
-}
-.searchbar .genre{
-    float: right;
+    font-size: 15px;
+    padding: 4px 10px;
 }
 .catalogue{
-    min-height: 420px;
+    height: 40px;
+    border: 1px solid #AAA;
+    position: relative;
+    min-height: 430px;
 }
-.catalogue .track{
+.track{
     height: 84px;
-    border: 2px solid #CBCBCB;
+    border: 1px solid #AAA;
 }
-.catalogue .track img{
-    float:left;
-    margin-left:7px;
-    margin-top:1px;
-    width:75px;
-    height:75px;
+.track img{
+    margin-left: 7px;
+    margin-top: 4px;
+    width: 75px;
+    height: 75px;
     border-radius: 40px;
-    border: 1px solid #D3D3D3
+    overflow: hidden;
+}
+.track>div{
+    display: inline-block;
+    position: relative;
 }
 .track .info{
-    margin-left: 10px;
-    float: left;
-    width: 140px;
+    top:-20px;
+    margin-left: 30px;
+    width: 150px;
 }
-.track .info a{
-    margin-top: 5px;
-    display:block;
+.track .info a {
+    margin-top: 10px;
+    display: block;
 }
-.track .info a:nth-of-type(2){
-    color:#A0A0A0;
+.track .info a:nth-of-type(2) {
+    color: #AAA;
 }
 .track .audio{
-    display: inline-block;
-    margin: auto;
-    width: 100px;
-    height: 50px;
+	top:-8px;
 }
-.track audio{
-    margin-top:10px;
-    width:350px;
+.track audio {
+    margin-top: 10px;
+    width: 350px;
     height: 40px;
+    margin-bottom: 3px;
 }
-.track .audio p{
-	width: 360px;
-    text-align:center;
+.track .audio p {
+    color:#888;
+    text-align: center;
 }
 .track .buttons{
-    display:inline-block;
-    float:right;
+    top:-35px;
+    margin-left: 30px;
 }
-.track .buttons button{
+.track .buttons button {
     width: 40px;
-    height:40px;
+    height: 40px;
     margin-right: 25px;
-    margin-top:20px;
+    margin-top: 20px;
     border-radius: 20px;
     cursor: pointer;
     border: 1px solid #DCDCDC;
+    color: #AAA;
+    background-color: #EEE;
 }
-.track .buttons button.cost{
-	font-size: 18px;
-	color: #A0A0A0;
-	background-color: white;
-	width: 40px;
-    height:40px;
+.track .buttons button:hover{
+    background-color: #DDD;
+    color: #999;
+}
+.track .buttons button.cost {
+    font-size: 18px;
+    color: #AAA;
+    background-color: white;
+    width: 40px;
+    height: 40px;
     margin-right: 25px;
-    margin-top:20px;
-	border: none;
-	cursor: default;
+    margin-top: 20px;
+    border: none;
+    cursor: default;
 }
-#search{
-    margin-left: 40px;
-}
-.track .buttons button:nth-of-type(1){
-    margin-right: 37px;
-}
-img.profile-mini{
-    margin: 0;
+li.checkout {
     height: 60px;
-    width: 60px;
-    border-radius: 30px ;
+    border: 2px solid #CBCBCB;
+    display: table-cell;
+    width: 800px;
+    vertical-align: middle;
 }
-li.checkout{
-	height: 60px;
-	border: 2px solid #CBCBCB;
-	display: table-cell;
-	width: 800px;
-	vertical-align: middle;
+.checkout>div {
+    display: inline-block;
 }
-.checkout div{
-	display: inline-block;
+.checkout>div:first-of-type{
+    width:500px;
+    text-align: center;
 }
-.checkout .sum{
-	width:500px;
-	text-align: center;
+.checkout .total {
+    text-align: center;
 }
-.checkout button{
-	margin-left: 40px;
-	height: 50px;
-	cursor: pointer;
-	width: 200px;
-	border-radius: 10px;
-	border:none;
-	font-size: 18px;
-	color: #6C6C6C
+
+.checkout button {
+    margin-left: 40px;
+    height: 40px;
+    cursor: pointer;
+    width: 150px;
+    border-radius: 10px;
+    border: none;
+    font-size: 18px;
+    background-color: #EEE;
+    color: #AAA;
 }
-.checkout div:nth-of-type(1){
-	width: 480px;
-	text-align: center;
+.checkout button:hover{
+    background-color: #DDD;
+    color: #999;
 }
