--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,17 +1,40 @@
-<div th:fragment="guest-header">
-    <header>
-        <a th:href="@{/}"><h1>WYM</h1></a>
-        <a th:href="@{/login}" class="nav">Вход</a>
-        <a th:href="@{/register}" class="nav">Регистрация</a>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>main</title>
+    <link rel="stylesheet" href="../../static/styles/cssandjs/main.css">
+</head>
+<body>
+<div class="container">
+    <header th:fragment="guest-header">
+        <a th:href="@{/}" class="logo"><h1>WYM</h1></a>
+        <div class="nav">
+            <div><a th:href="@{/register}">Регистрация</a></div>
+            <div><a th:href="@{/login}">Вход</a></div>
+        </div>
+    </header>
+    <header th:fragment="user-header">
+        <a th:href="@{/}" class="logo"><h1>WYM</h1></a>
+        <div class="nav">
+            <div class="profile-mini">
+                <a th:href="@{/users/{u}(u=${username})}">
+                    <img src="#" class="profile-mini">
+                </a>
+            </div>
+            <div><a th:href="@{/favorite}">избранное</a></div>
+            <div><a th:href="@{/cart}">корзина</a></div>
+            <div class="dropdown">
+                <p th:text="${username}">имя пользователя</p>
+                <div class="dropdown-content">
+                    <a th:href="@{/users/{u}(u=${username})}">профиль</a>
+                    <a href="#">баланс: 2р</a>
+                    <a href="#">купленные треки</a>
+                    <a th:href="@{/logout}" class="logout">выйти</a>
+                </div>
+            </div>
+        </div>
     </header>
 </div>
-
-<div th:fragment="user-header">
-    <header>
-        <a th:href="@{/}"><h1>WYM</h1></a>
-        <a class="profile-mini" th:href = "@{/users/{u}(u=${username})}"><img src="#" class="profile-mini"></a>
-        <a class="nav" th:href = "@{/users/{u}(u=${username})}" th:text="${username}">имя пользователя</a>
-        <a class="nav" th:href = "@{/favorite}">избранное</a>
-        <a class="nav" th:href = "@{/cart}">корзина</a>
-    </header>
-</div>
+</body>
+</html>
