--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div class="container">
-    <div th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></div>
-    <div th:replace="fragments/searchbar :: searchbar"></div>
+    <header th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></header>
+    <section th:replace="fragments/searchbar :: searchbar"></section>
     <section class="catalogue">
-        <ul>
+        <ul th:each="track:${tracks}">
             <li>
                 <div class="track">
                     <div>
@@ -20,12 +20,12 @@
                         </a>
                     </div>
                     <div class="info">
-                        <a>Название</a>
+                        <a th:text="${track.getName()}">Название</a>
                         <a>Автор</a>
                     </div>
                     <div class="audio">
                         <audio controls src="#">audio is not supported</audio>
-                        <p>джаз/грусть</p>
+                        <p th:text="${track.getGenre()}+'/'+${track.getMood()}">джаз/грусть</p>
                     </div>
                     <div class = "buttons">
                         <button>star</button>
