--- a/src/main/resources/templates/favorite.html
+++ b/src/main/resources/templates/favorite.html
@@ -11,7 +11,7 @@
     <header th:replace="fragments/header :: user-header"></header>
     <section class="catalogue">
         <ul>
-            <li>
+            <li th:each="track:${tracks}">
                 <div class="track">
                     <div>
                         <a>
@@ -19,12 +19,12 @@
                         </a>
                     </div>
                     <div class="info">
-                        <a>Название</a>
+                        <a th:text="${track.getName()}">Название</a>
                         <a>Автор</a>
                     </div>
                     <div class="audio">
                         <audio controls src="#">audio is not supported</audio>
-                        <p>джаз/грусть</p>
+                        <p th:text="${track.getGenre()}+'/'+${track.getMood()}">джаз/грусть</p>
                     </div>
                     <div class = "buttons">
                         <button>star</button>
