--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,28 +11,8 @@
     <header th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></header>
     <section th:replace="fragments/searchbar :: searchbar"></section>
     <section class="catalogue">
-        <ul th:each="track:${tracks}">
-            <li>
-                <div class="track">
-                    <div>
-                        <a>
-                            <img src="#">
-                        </a>
-                    </div>
-                    <div class="info">
-                        <a th:text="${track.getName()}">Название</a>
-                        <a>Автор</a>
-                    </div>
-                    <div class="audio">
-                        <audio controls src="#">audio is not supported</audio>
-                        <p th:text="${track.getGenre()}+'/'+${track.getMood()}">джаз/грусть</p>
-                    </div>
-                    <div class = "buttons">
-                        <button>star</button>
-                        <button>cart</button>
-                    </div>
-                </div>
-            </li>
+        <ul>
+            <li th:replace="fragments/catalogue :: star-list" th:each="tracks"></li>
         </ul>
     </section>
 </div>
