--- a/src/main/resources/templates/fragments/catalogue.html
+++ b/src/main/resources/templates/fragments/catalogue.html
@@ -15,21 +15,20 @@
                 </a>
             </div>
             <div class="info">
-                <a th:text="${track.getName()}">Название</a>
-                <a>Автор</a>
+                <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${username})}">Название</a>
+                <a th:text="${track.getAuthor().getLogin()}" th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
             </div>
             <div class="audio">
                 <audio controls src="#">audio is not supported</audio>
-                <p th:text="${track.getGenre()}+'/'+${track.getMood()}">джаз/грусть</p>
+                <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
             </div>
             <div class = "buttons">
-                <form th:action="@{/}" method="post">
-                    <button name="add-to-fav" th:value="${track.getId()}">star</button>
+                <form th:action="@{/track/{i}/addToFavorite(i=${track.getId()})}" method="post">
+                    <button name="add-to-fav" th:value="star">star</button>
                 </form>
-                <form th:action="@{/}" method="post">
-                    <button name="add-to-cart" th:value="${track.getId()}">cart</button>
+                <form th:action="@{/track/{i}/addToCart(i=${track.getId()})}" method="post">
+                    <button name="add-to-cart" th:value="cart">cart</button>
                 </form>
-
             </div>
         </div>
     </li>
@@ -41,16 +40,20 @@
                 </a>
             </div>
             <div class="info">
-                <a th:text="${track.getName()}">Название</a>
-                <a>Автор</a>
+                <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${username})}">Название</a>
+                <a th:text="${track.getAuthor().getLogin()}" th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
             </div>
             <div class="audio">
                 <audio controls src="#">audio is not supported</audio>
                 <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
             </div>
             <div class = "buttons">
-                <button>star</button>
-                <button class="cost" th:text="${track.getPrice()}+' р.'">10$</button>
+                <form th:action="@{/track/{i}/addToFavorite(i=${track.getId()})}" method="post">
+                    <button name="add-to-fav" th:value="star">star</button>
+                </form>
+                <form>
+                    <button class="cost" th:text="${track.getPrice()}+' р.'">10$</button>
+                </form>
             </div>
         </div>
     </li>
