--- a/src/main/resources/templates/fragments/catalogue.html
+++ b/src/main/resources/templates/fragments/catalogue.html
@@ -7,56 +7,37 @@
 </head>
 <body>
 <div class="container">
-    <li th:fragment="star-list" th:each="track:${tracks}">
-        <div class="track">
-            <div>
-                <a>
-                    <img src="#">
-                </a>
+    <ul>
+        <li th:fragment="star-list" th:each="t:${tracks}"
+            th:with="track=${t.getKey()},stared=${t.getValue()[0]},carted=${t.getValue()[1]}">
+            <div class="track">
+                <div>
+                    <a>
+                        <img src="#">
+                    </a>
+                </div>
+                <div class="info">
+                    <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${track.getId()})}">Название</a>
+                    <a th:text="${track.getAuthor().getLogin()}"
+                       th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
+                </div>
+                <div class="audio">
+                    <audio controls src="#">audio is not supported</audio>
+                    <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
+                </div>
+                <div class="buttons">
+                    <form th:action="@{/track/{i}/{j}(j=(${stared}?'removeFromFavorite':'addToFavorite'),i=${track.getId()})}"
+                          method="post">
+                        <button name="add-to-fav" th:value="star" th:class="${stared}?'stared'">лайк</button>
+                    </form>
+                    <form th:action="@{/track/{i}/{j}(i=${track.getId()},j=(${carted}?'removeFromCart':'addToCart'))}"
+                          method="post">
+                        <button name="add-to-cart" th:value="cart" th:class="${carted}?'carted'">$</button>
+                    </form>
+                </div>
             </div>
-            <div class="info">
-                <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${track.getId()})}">Название</a>
-                <a th:text="${track.getAuthor().getLogin()}" th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
-            </div>
-            <div class="audio">
-                <audio controls src="#">audio is not supported</audio>
-                <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
-            </div>
-            <div class = "buttons">
-                <form th:action="@{/track/{i}/addToFavorite(i=${track.getId()})}" method="post">
-                    <button name="add-to-fav" th:value="star">star</button>
-                </form>
-                <form th:action="@{/track/{i}/addToCart(i=${track.getId()})}" method="post">
-                    <button name="add-to-cart" th:value="cart">cart</button>
-                </form>
-            </div>
-        </div>
-    </li>
-    <li th:fragment="price-list" th:each="track:${tracks}">
-        <div class="track">
-            <div>
-                <a>
-                    <img src="#">
-                </a>
-            </div>
-            <div class="info">
-                <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${track.getId()})}">Название</a>
-                <a th:text="${track.getAuthor().getLogin()}" th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
-            </div>
-            <div class="audio">
-                <audio controls src="#">audio is not supported</audio>
-                <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
-            </div>
-            <div class = "buttons">
-                <form th:action="@{/track/{i}/addToFavorite(i=${track.getId()})}" method="post">
-                    <button name="add-to-fav" th:value="star">star</button>
-                </form>
-                <form>
-                    <button class="cost" th:text="${track.getPrice()}+' р.'">10$</button>
-                </form>
-            </div>
-        </div>
-    </li>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
