--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -8,15 +8,16 @@
 </head>
 <body>
 <div class="container">
-	<header th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></header>
-  <div class="track-details">
-		<img src="#">
-		<div class="info">
-                <a th:text="${track.getName()}">Название</a>
-                <a th:text="${track.getAuthor().getLogin()}" th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
-          </div>
-	</div>
-    <div class="track">
+    <header th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></header>
+    <div class="track-details">
+        <img src="#">
+        <div class="info">
+            <a th:text="${track.getName()}">Название</a>
+            <a th:text="${track.getAuthor().getLogin()}"
+               th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
+        </div>
+    </div>
+        <div class="track">
             <div>
                 <a>
                     <img src="#">
@@ -26,18 +27,20 @@
                 <audio controls src="#">audio is not supported</audio>
                 <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
             </div>
-            <div class = "buttons">
-                <form th:action="@{/track/{i}/addToFavorite(i=${track.getId()})}" method="post">
-                    <button name="add-to-fav" th:value="star">star</button>
+            <div class="buttons">
+                <form th:action="@{/track/{i}/{j}(j=(${stared}?'removeFromFavorite':'addToFavorite'),i=${track.getId()})}"
+                      method="post">
+                    <button name="add-to-fav" th:value="star" th:class="${stared}?'stared'">Лайк</button>
                 </form>
-                <form th:action="@{/track/{i}/addToCart(i=${track.getId()})}" method="post">
-                    <button name="add-to-cart" th:value="cart">cart</button>
+                <form th:action="@{/track/{i}/{j}(i=${track.getId()},j=(${carted}?'removeFromCart':'addToCart'))}"
+                      method="post">
+                    <button name="add-to-cart" th:value="cart" th:class="${carted}?'carted'">$</button>
                 </form>
             </div>
         </div>
-	<div class="track-description">
-		<p th:text="${track.getDescription()}"></p>
-	</div>
+        <div class="track-description">
+            <p th:text="${track.getDescription()}"></p>
+        </div>
 </div>
 </body>
 </html>
