--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,18 +18,18 @@
         <a th:href="@{/}" class="logo"><h1>WYM</h1></a>
         <div class="nav">
             <div class="profile-mini">
-                <a th:href="@{/user/{u}(u=${username})}">
+                <a th:href="@{/user/{u}(u=${user.getLogin()})}">
                     <img src="#" class="profile-mini">
                 </a>
             </div>
             <div><a th:href="@{/favorite}">избранное</a></div>
             <div><a th:href="@{/cart}">корзина</a></div>
             <div class="dropdown">
-                <p th:text="${username}">имя пользователя</p>
+                <p th:text="${user.getLogin()}">имя пользователя</p>
                 <div class="dropdown-content">
-                    <a th:href="@{/user/{u}(u=${username})}">профиль</a>
-                    <a href="#">баланс: 2р</a>
-                    <a href="#">купленные треки</a>
+                    <a th:href="@{/user/{u}(u=${user.getLogin()})}">профиль</a>
+                    <a th:href="@{/balance}" th:text="'баланс: '+${user.getBalance()}">баланс: 2р</a>
+                    <a th:href="@{/purchased}">купленные треки</a>
                     <a th:href="@{/logout}" class="logout">выйти</a>
                 </div>
             </div>
