--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,10 +14,13 @@
             <li th:replace="fragments/catalogue :: star-list" th:each="${tracks}"></li>
 			<li class="checkout">
 				<div>
-                	<p class="total" th:text="'Всего '+${total}+' р. ('+${tracks.size()}+(${tracks.size()==1}?' трек)':(${tracks.size()<5&&tracks.size()>0}?'трека)':' треков)'))">Всего 10р (1 трек)</p>
+                	<p th:if="${tracks.size()!=0}" class="total" th:text="'Всего '+${total}+' р. ('+${tracks.size()}+(${tracks.size()==1}?' трек)':(${tracks.size()<5&&tracks.size()>0}?'трека)':' треков)'))">Всего 10р (1 трек)</p>
+                    <p th:if="${tracks.size()==0}" class="error">В корзине еще ничего нет...</p>
 				</div>
 				<div>
-                	<button class="pay">Оплатить</button>
+                    <form th:if="${tracks.size()!=0}" th:action="@{/cart/checkout}" method="get">
+                        <button class="pay">Оплатить</button>
+                    </form>
 				</div>
 			</li>
         </ul>
