--- a/src/main/resources/templates/balance.html
+++ b/src/main/resources/templates/balance.html
@@ -12,7 +12,7 @@
 	<form th:action="@{/balance}" method="post">
 		<div>
 			<label for="amount">Сумма</label>
-			<input type="text" id="amount" name="amount" value = "">
+			<input type="text" id="amount" name="amount" value = "" pattern="[0-9]{5}" maxlength="5">
 		</div>
 		<div>
 			<label for="owner">Владелец</label>
@@ -20,11 +20,11 @@
 		</div>
 		<div>
 			<label for="cvv">CVV</label>
-			<input type="text" id="cvv" name="ccv">
+			<input type="text" id="cvv" name="ccv" pattern="[0-9]{3}" maxlength="3">
 		</div>
 		<div>
 			<label for="cardNumber">Номер</label>
-			<input type="text" id="cardNumber" name="cardNumber">
+			<input type="text" id="cardNumber" name="cardNumber" pattern="[0-9]{16}" maxlength="16">
 		</div>
 		<div>
 			<label>Срок годности<br>
@@ -51,6 +51,10 @@
 				<option value="25"> 2025</option>
 				<option value="26"> 2026</option>
 			</select>
+		</div>
+		<div>
+			<label for="address">Адрес</label>
+			<input type="text" id="address" name="address">
 		</div>
 		<div>
 			<input type="submit" id="confirm-purchase" value = "Оплатить">
