--- a/src/main/resources/templates/fragments/edit.html
+++ b/src/main/resources/templates/fragments/edit.html
@@ -12,41 +12,53 @@
             <form>
                 <button class="selected">Об исполнителе</button>
             </form>
-            <form th:action="@{/user/{u}/tracks(u=${author.getLogin()})}">
+            <form th:action="@{/profile/releases}">
                 <button>Треки</button>
             </form>
         </div>
         <div class="about-container">
-          <div>
-            <form>
-              <label for="login"><h3>Имя пользователя</h3></label>
-              <input type="text" name="username" id="login" th:value="${author.getLogin()}" value="login">
-            </form>
-          </div>
-          <h3 th:text="${author.getLogin()}">Сменить пароль</h3>
-          <div class="underbox">
-          <form>
-            <label for="login">Старый пароль</label>
-            <input type="password" name="old-password" id="old-password">
-            <label for="login">Новый пароль</label>
-            <input type="password" name="new-password" id="new-password">
-            <label for="login">Повтор</label>
-            <input type="password" name="repeat" id="repeat">
-            <input type="submit" value="Изменить">
-          </form>
-          </div>
-          <form>
-            <div class="description">
-                <h3>Описание</h3>
-                <textarea name="bio" th:text="${author.getBiography()}">2021-12-28 20:25:39.757 WARN 17896 —- [nio-8080-exec-2].w.s.m.s.DefaultHandlerExceptionResolver : Resolved[org.springframework.web.method.annotation.MethodArgumentTypeMismatchException: Failed to convert value of type 'java.lang.String' to required type 'java.lang.Long'; nested exception is java.lang.NumberFormatException: For input string: "${track.getId()}"]</textarea>
+            <div>
+                <form>
+                    <label for="login"><h3>Поменять никнейм</h3></label>
+                    <input type="text" name="username" id="login" th:value="${user.getLogin()}" value="login" maxlength="16">
+                </form>
             </div>
-            <input type="submit" value="Подтвердить">
-          </form>
+            <h3 th:text="${user.getLogin()}">Сменить пароль</h3>
+            <div class="underbox">
+                <form>
+                    <label for="firstname">Имя</label>
+                    <input type="text" name="firstname" id="firstname" maxlength="20">
+                    <label for="login">Фамилия</label>
+                    <input type="text" name="lastname" id="middlename" maxlength="20">
+                    <label for="login">Отчество</label>
+                    <input type="text" name="lastname" id="lastname" maxlength="20">
+                    <input type="submit" value="Изменить">
+                </form>
+            </div>
+            <h3 th:text="${user.getLogin()}">Сменить пароль</h3>
+            <div class="underbox">
+                <form>
+                    <label for="login">Старый пароль</label>
+                    <input type="password" name="old-password" id="old-password" maxlength="20">
+                    <label for="login">Новый пароль</label>
+                    <input type="password" name="new-password" id="new-password" maxlength="20">
+                    <label for="login">Повтор</label>
+                    <input type="password" name="repeat" id="repeat" maxlength="20">
+                    <input type="submit" value="Изменить">
+                </form>
+            </div>
+            <form>
+                <div class="description">
+                    <h3>Описание</h3>
+                    <textarea name="bio" maxlength="500" th:text="${user.getBiography()}">2021-12-28 20:25:39.757 WARN 17896 —- [nio-8080-exec-2].w.s.m.s.DefaultHandlerExceptionResolver : Resolved[org.springframework.web.method.annotation.MethodArgumentTypeMismatchException: Failed to convert value of type 'java.lang.String' to required type 'java.lang.Long'; nested exception is java.lang.NumberFormatException: For input string: "${track.getId()}"]</textarea>
+                </div>
+                <input type="submit" value="Подтвердить">
+            </form>
         </div>
     </div>
     <div th:fragment="tracks" class="about">
         <div class="buttons">
-            <form th:action="@{/user/{u}(u=${author.getLogin()})}">
+            <form th:action="@{/profile}">
                 <button>Об исполнителе</button>
             </form>
             <form>
