--- a/src/main/resources/templates/profile-edit.html
+++ b/src/main/resources/templates/profile-edit.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <div class="container">
-    <header th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></header>
+    <header th:replace="fragments/header :: 'user-header'"></header>
     <div class="profile">
         <img class="profile-maxi" src="#">
     </div>
-    <div th:replace="fragments/about :: ${tracks!=null}? 'tracks':'info'" class="about"></div>
+    <div th:replace="fragments/edit :: ${tracks!=null}? 'tracks':'info'" class="about"></div>
 </div>
 </body>
 </html>
