--- a/src/main/resources/templates/balance.html
+++ b/src/main/resources/templates/balance.html
@@ -12,49 +12,55 @@
 	<form th:action="@{/balance}" method="post">
 		<div>
 			<label for="amount">Сумма</label>
-			<input type="text" id="amount" name="amount" value = "" pattern="[0-9]{5}" maxlength="5">
+			<input type="text" id="amount" name="amount">
 		</div>
 		<div>
-			<label for="owner">Владелец</label>
-			<input type="text" id="owner" name="owner">
+			<label for="cardOwner">Владелец</label>
+			<input type="text" id="cardOwner" name="cardOwner" maxlength="30">
 		</div>
 		<div>
 			<label for="cvv">CVV</label>
-			<input type="text" id="cvv" name="ccv" pattern="[0-9]{3}" maxlength="3">
+			<input type="text" id="cvv" name="cvv" pattern="[0-9]{3}" maxlength="3">
 		</div>
 		<div>
 			<label for="cardNumber">Номер</label>
 			<input type="text" id="cardNumber" name="cardNumber" pattern="[0-9]{16}" maxlength="16">
 		</div>
 		<div>
-			<label>Срок годности<br>
+			<label>Срок действия<br>
 			</label>
 			<select name="month" id="month">
-			  <option value="01">Январь</option>
-				<option value="02">Февраль </option>
-				<option value="03">Март</option>
-				<option value="04">Апрель</option>
-				<option value="05">Май</option>
-				<option value="06">Июнь</option>
-				<option value="07">Июль</option>
-				<option value="08">Август</option>
-				<option value="09">Сентябрь</option>
+			  <option value="1">Январь</option>
+				<option value="2">Февраль </option>
+				<option value="3">Март</option>
+				<option value="4">Апрель</option>
+				<option value="5">Май</option>
+				<option value="6">Июнь</option>
+				<option value="7">Июль</option>
+				<option value="8">Август</option>
+				<option value="9">Сентябрь</option>
 				<option value="10">Октябрь</option>
 				<option value="11">Ноябрь</option>
 				<option value="12">Декабрь</option>
 			</select>
 			<select name = "year" id="year">
-				<option value="21"> 2021</option>
-				<option value="22"> 2022</option>
-				<option value="23"> 2023</option>
-				<option value="24"> 2024</option>
-				<option value="25"> 2025</option>
-				<option value="26"> 2026</option>
+				<option value="2022"> 2022</option>
+				<option value="2023"> 2023</option>
+				<option value="2024"> 2024</option>
+				<option value="2025"> 2025</option>
+				<option value="2026"> 2026</option>
+				<option value="2027"> 2027</option>
+				<option value="2028"> 2028</option>
+				<option value="2029"> 2029</option>
 			</select>
 		</div>
 		<div>
 			<label for="address">Адрес</label>
 			<input type="text" id="address" name="address">
+		</div>
+		<div>
+			<label for="postalCode">Почтовый индекс</label>
+			<input type="text" id="postalCode" name="postalCode" pattern="[0-9]{6}" maxlength="6">
 		</div>
 		<div>
 			<input type="submit" id="confirm-purchase" value = "Оплатить">
