--- a/src/main/resources/templates/fragments/edit.html
+++ b/src/main/resources/templates/fragments/edit.html
@@ -27,11 +27,11 @@
             <div class="underbox marginBottom">
                 <form method="post">
                     <label for="firstname">Имя</label>
-                    <input type="text" name="firstname" id="firstname" maxlength="20">
+                    <input type="text" name="firstname" id="firstname" th:value="${user.getFirstname()}" maxlength="20">
                     <label for="login">Фамилия</label>
-                    <input type="text" name="lastname" id="middlename" maxlength="20">
+                    <input type="text" name="lastname" id="lastname" th:value="${user.getLastname()}" maxlength="20">
                     <label for="login">Отчество</label>
-                    <input type="text" name="lastname" id="lastname" maxlength="20">
+                    <input type="text" name="middlename" id="middlename" th:value="${user.getMiddlename()}" maxlength="20">
                     <input type="submit" value="Изменить">
                 </form>
             </div>
@@ -50,7 +50,7 @@
             <form method="post">
                 <div class="description">
                     <h3>Описание</h3>
-                    <textarea name="bio" maxlength="500" th:text="${user.getBiography()}">2021-12-28 20:25:39.757 WARN 17896 —- [nio-8080-exec-2].w.s.m.s.DefaultHandlerExceptionResolver : Resolved[org.springframework.web.method.annotation.MethodArgumentTypeMismatchException: Failed to convert value of type 'java.lang.String' to required type 'java.lang.Long'; nested exception is java.lang.NumberFormatException: For input string: "${track.getId()}"]</textarea>
+                    <textarea name="bio" maxlength="500" th:text="${user.getBiography()}"></textarea>
                 </div>
                 <input type="submit" value="Подтвердить">
             </form>
