--- a/src/main/resources/templates/fragments/catalogue.html
+++ b/src/main/resources/templates/fragments/catalogue.html
@@ -66,6 +66,34 @@
                 </div>
             </div>
         </li>
+        <li th:fragment="edit-list(tracks)" th:each="track:${tracks}">
+            <div class="track">
+                <div>
+                    <a th:href="@{/track/{u}(u=${track.getId()})}">
+                        <img src="#">
+                    </a>
+                </div>
+                <div class="info">
+                    <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${track.getId()})}">Название</a>
+                    <a th:text="${track.getAuthor().getLogin()}"
+                       th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
+                </div>
+                <div class="audio">
+                    <audio controls src="#">audio is not supported</audio>
+                    <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
+                </div>
+                <div class="buttons">
+                    <form th:action="@{/track/{i}/{j}(j=(${stared}?'removeFromFavorite':'addToFavorite'),i=${track.getId()})}"
+                          method="post">
+                        <button name="add-to-fav" th:value="star" th:class="${stared}?'stared'">лайк</button>
+                    </form>
+                    <form th:action="@{/track/{i}/{j}(i=${track.getId()},j=(${carted}?'removeFromCart':'addToCart'))}"
+                          method="post">
+                        <button name="download" th:value="download" class="download" >скачать</button>
+                    </form>
+                </div>
+            </div>
+        </li>
     </ul>
 </div>
 </body>
